--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swiperef"
@@ -7,34 +7,45 @@
     android:layout_height="match_parent"
     tools:context=".Maps">
 
-    <LinearLayout
-        android:background="@color/cardview_dark_background"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
-        <EditText
-            android:id="@+id/placeori"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="your potitions"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:textSize="14dp" />
-        <EditText
-            android:id="@+id/placedes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="yout destination"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:textSize="14dp" />
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
-    </LinearLayout>
-</LinearLayout>
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/placeori"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:hint="your potitions"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:textSize="14dp"
+        app:layout_constraintCircleRadius="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/placedes"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:hint="yout destination"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/placeori" />
+
+    <Button
+        android:id="@+id/amikom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="Amikom Purwokerto"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
